favicon path fix

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <!-- some seo stuff -->
   <meta name="description" content="CV">
   <!-- favicon stuff -->
-  <link rel="apple-touch-icon" sizes="180x180" href="https://github.com/tsYaroslav/CV/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="https://github.com/tsYaroslav/CV/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="https://github.com/tsYaroslav/CV/favicon/favicon-16x16.png">
-  <link rel="manifest" href="https://github.com/tsYaroslav/CV/favicon/site.webmanifest">
-  <link rel="shortcut icon" href="https://github.com/tsYaroslav/CV/favicon/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://tsyaroslav.github.io/CV/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://tsyaroslav.github.io/CV/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://tsyaroslav.github.io/CV/favicon/favicon-16x16.png">
+  <link rel="manifest" href="https://tsyaroslav.github.io/CV/favicon/site.webmanifest">
+  <link rel="shortcut icon" href="https://tsyaroslav.github.io/CV/favicon/favicon.ico">
   <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="msapplication-config" content="https://github.com/tsYaroslav/CV/favicon/browserconfig.xml">
+  <meta name="msapplication-config" content="https://tsyaroslav.github.io/CV/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
   <!-- styles -->
   <link rel="stylesheet" href="css/reset.css">
